--- a/packages/next/package.json
+++ b/packages/next/package.json
@@ -34,7 +34,7 @@
     "typescript": "^5.6.2"
   },
   "peerDependencies": {
-    "@reflct/react": "*",
+    "@reflct/react": "^0.0.0-alpha.1",
     "next": "^14.2.14"
   },
   "dependencies": {
