--- a/.github/workflows/release-package.yml
+++ b/.github/workflows/release-package.yml
@@ -19,10 +19,10 @@ jobs:
           scope: "@reflct"
 
       - name: Install dependencies
-        run: npm install
+        run: yarn install
 
       - name: Build packages
-        run: npm run build
+        run: yarn build
 
       - name: Publish to npm
         run: npx lerna publish from-git --yes
