--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "reflct",
   "version": "1.0.0",
+  "private": true,
   "authors": [
     "In Ha Ryu <inha.ryu.97@gmail.com>"
   ],
@@ -14,7 +15,7 @@
   },
   "scripts": {
     "build": "lerna run build",
-    "publish": "lerna publish from-git --yes",
+    "publish": "lerna publish from-git --yes --access public",
     "prepare": "husky"
   },
   "dependencies": {
