--- a/.github/workflows/release-package.yml
+++ b/.github/workflows/release-package.yml
@@ -25,6 +25,6 @@ jobs:
         run: yarn build
 
       - name: Publish to npm
-        run: yarn publish
+        run: npx lerna publish from-git --yes --access public
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
