--- a/packages/next/package.json
+++ b/packages/next/package.json
@@ -3,8 +3,12 @@
   "version": "0.0.0",
   "description": "",
   "type": "module",
+  "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
   "types": "dist/index.d.ts",
+  "files": [
+    "dist"
+  ],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/reflct/reflct.git",
@@ -42,9 +46,11 @@
     "sass": "^1.79.2",
     "typescript": "^5.6.2"
   },
-  "dependencies": {
+  "peerDependencies": {
     "@reflct/react": "^0.0.0",
-    "dotenv": "^16.4.5",
     "next": "^15.0.3"
+  },
+  "dependencies": {
+    "dotenv": "^16.4.5"
   }
 }
