--- a/packages/next/tsconfig.json
+++ b/packages/next/tsconfig.json
@@ -4,7 +4,7 @@
     "module": "ESNext",
     "jsx": "react",
     "sourceMap": true,
-    "outDir": "./dist/esm/types",
+    "outDir": "./dist/types",
     "strict": true,
     "moduleResolution": "node",
     "allowSyntheticDefaultImports": true,
