--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -6,6 +6,9 @@
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
   "types": "dist/index.d.ts",
+  "files": [
+    "dist"
+  ],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/reflct/reflct.git",
@@ -27,9 +30,6 @@
   ],
   "license": "MIT",
   "devDependencies": {
-    "@mkkellogg/gaussian-splats-3d": "0.4.5",
-    "@react-three/drei": "^9.92.7",
-    "@react-three/fiber": "^8.15.12",
     "@rollup/plugin-commonjs": "^26.0.1",
     "@rollup/plugin-node-resolve": "^15.2.3",
     "@rollup/plugin-replace": "^5.0.7",
@@ -37,13 +37,13 @@
     "@rollup/plugin-typescript": "^11.1.6",
     "@types/react": "^18.3.8",
     "postcss": "^8.4.47",
-    "react": "^18.3.1",
     "rollup": "^4.22.4",
     "rollup-plugin-dts": "^6.1.1",
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-postcss": "^4.0.2",
     "sass": "^1.79.2",
-    "typescript": "^5.6.2"
+    "typescript": "^5.6.2",
+    "dotenv": "^16.4.5"
   },
   "peerDependencies": {
     "@mkkellogg/gaussian-splats-3d": "0.4.5",
@@ -54,7 +54,11 @@
     "three": "^0.168.0"
   },
   "dependencies": {
-    "dotenv": "^16.4.5",
-    "gsap": "^3.12.5"
+    "@mkkellogg/gaussian-splats-3d": "0.4.5",
+    "@react-three/drei": "^9.92.7",
+    "@react-three/fiber": "^8.15.12",
+    "gsap": "^3.12.5",
+    "react": "^18.3.1",
+    "three": "^0.168.0"
   }
 }
