--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@reflct/react",
-  "version": "0.0.0",
+  "version": "0.0.1-alpha.0",
   "description": "",
   "type": "module",
   "main": "dist/cjs/index.js",
@@ -36,14 +36,14 @@
     "@rollup/plugin-terser": "^0.4.4",
     "@rollup/plugin-typescript": "^11.1.6",
     "@types/react": "^18.3.8",
+    "dotenv": "^16.4.5",
     "postcss": "^8.4.47",
     "rollup": "^4.22.4",
     "rollup-plugin-dts": "^6.1.1",
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-postcss": "^4.0.2",
     "sass": "^1.79.2",
-    "typescript": "^5.6.2",
-    "dotenv": "^16.4.5"
+    "typescript": "^5.6.2"
   },
   "peerDependencies": {
     "@mkkellogg/gaussian-splats-3d": "0.4.5",
