--- a/packages/next/package.json
+++ b/packages/next/package.json
@@ -47,7 +47,7 @@
     "typescript": "^5.6.2"
   },
   "peerDependencies": {
-    "@reflct/react": "^0.0.0",
+    "@reflct/react": "^0.0.1-alpha.0",
     "next": "^15.0.3"
   },
   "dependencies": {
