--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -9,6 +9,10 @@
   "files": [
     "dist"
   ],
+  "exports": {
+    "import": "./dist/esm/index.js",
+    "require": "./dist/cjs/index.js"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/reflct/reflct.git",
@@ -60,5 +64,6 @@
     "gsap": "^3.12.5",
     "react": "^18.3.1",
     "three": "^0.168.0"
-  }
+  },
+  "gitHead": "70185d19ad658c244a3c0e7c28842a2da46996c0"
 }
