--- a/package.json
+++ b/package.json
@@ -13,6 +13,11 @@
     "url": "git+https://github.com/reflct/reflct.git"
   },
   "devDependencies": {
+    "@babel/plugin-transform-runtime": "^7.25.9",
+    "@babel/preset-env": "^7.26.0",
+    "@babel/preset-react": "^7.25.9",
+    "@babel/preset-typescript": "^7.26.0",
+    "@rollup/plugin-babel": "^6.0.4",
     "lerna": "^8.1.9"
   },
   "scripts": {
