--- a/packages/next/tsconfig.json
+++ b/packages/next/tsconfig.json
@@ -2,6 +2,7 @@
   "compilerOptions": {
     "target": "ES5",
     "module": "ESNext",
+    "lib": ["dom", "es6"],
     "jsx": "react",
     "sourceMap": true,
     "outDir": "./dist/esm/types",
@@ -14,7 +15,8 @@
     "declaration": true,
     "declarationMap": true,
     "declarationDir": "./dist/esm/types",
-    "emitDeclarationOnly": true
+    "emitDeclarationOnly": true,
+    "noEmit": true
   },
   "include": ["src/**/*.ts", "src/**/*.tsx", "src/**/*.css"],
   "exclude": ["node_modules", "dist"]
