--- a/packages/react/tsconfig.json
+++ b/packages/react/tsconfig.json
@@ -2,6 +2,7 @@
   "compilerOptions": {
     "target": "ES5",
     "module": "ESNext",
+    "lib": ["dom", "es6"],
     "jsx": "react",
     "sourceMap": true,
     "outDir": "./dist/esm/types",
@@ -13,8 +14,9 @@
     "forceConsistentCasingInFileNames": true,
     "declaration": true,
     "declarationMap": true,
-    "declarationDir": "dist/types",
-    "emitDeclarationOnly": true
+    "declarationDir": "dist/esm/types",
+    "emitDeclarationOnly": true,
+    "noEmit": true
   },
   "include": ["src/**/*.ts", "src/**/*.tsx", "src/**/*.css"],
   "exclude": ["node_modules", "dist"]
