added types in exports

--- a/packages/next/package.json
+++ b/packages/next/package.json
@@ -11,7 +11,7 @@
   ],
   "exports": {
     "import": "./dist/esm/index.js",
-    "require": "./dist/cjs/index.js"
+    "types": "./dist/index.d.ts"
   },
   "repository": {
     "type": "git",
@@ -57,5 +57,5 @@
   "dependencies": {
     "dotenv": "^16.4.5"
   },
-  "gitHead": "70185d19ad658c244a3c0e7c28842a2da46996c0"
+  "gitHead": "0006ca77caafc50f3792204e896cb6809537deb1"
 }
