--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -11,7 +11,8 @@
   ],
   "exports": {
     "import": "./dist/esm/index.js",
-    "require": "./dist/cjs/index.js"
+    "require": "./dist/cjs/index.js",
+    "types": "./dist/index.d.ts"
   },
   "repository": {
     "type": "git",
@@ -65,5 +66,5 @@
     "react": "^18.3.1",
     "three": "^0.168.0"
   },
-  "gitHead": "70185d19ad658c244a3c0e7c28842a2da46996c0"
+  "gitHead": "0006ca77caafc50f3792204e896cb6809537deb1"
 }
