--- a/packages/next/package.json
+++ b/packages/next/package.json
@@ -2,17 +2,19 @@
   "name": "@reflct/next",
   "version": "0.0.1-alpha.2",
   "description": "",
-  "type": "module",
-  "main": "dist/cjs/index.js",
-  "module": "dist/esm/index.js",
-  "types": "dist/index.d.ts",
+  "main": "./dist/index.cjs.js",
+  "module": "./dist/index.esm.js",
+  "types": "./dist/index.d.ts",
+  "exports": {
+    ".": {
+      "import": "./dist/index.esm.js",
+      "require": "./dist/index.cjs.js",
+      "types": "./dist/index.d.ts"
+    }
+  },
   "files": [
     "dist"
   ],
-  "exports": {
-    "import": "./dist/esm/index.js",
-    "types": "./dist/index.d.ts"
-  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/reflct/reflct.git",
@@ -57,5 +59,5 @@
   "dependencies": {
     "dotenv": "^16.4.5"
   },
-  "gitHead": "0006ca77caafc50f3792204e896cb6809537deb1"
+  "gitHead": "38bd719014ebd35338f02cde0e4745b27e5729a7"
 }
