--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -61,6 +61,7 @@
     "react": "^18.3.1"
   },
   "dependencies": {
+    "@reflct/api": "^0.0.1-alpha.4",
     "@mkkellogg/gaussian-splats-3d": "0.4.5",
     "@react-three/drei": "^9.92.7",
     "@react-three/fiber": "^8.15.12",
