--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -27,8 +27,7 @@
     "clean": "rm -rf dist",
     "build": "npm run clean && rollup -c",
     "dev": "npm run clean && rollup -c -w",
-    "test": "jest",
-    "publish": "npm publish --access public"
+    "test": "jest"
   },
   "authors": [
     "In Ha Ryu <inha.ryu.97@gmail.com>"
