--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -26,8 +26,7 @@
   "scripts": {
     "clean": "rm -rf dist",
     "build": "npm run clean && rollup -c",
-    "dev": "npm run clean && rollup -c -w",
-    "test": "jest"
+    "dev": "npm run clean && rollup -c -w"
   },
   "authors": [
     "In Ha Ryu <inha.ryu.97@gmail.com>"
