--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -66,5 +66,6 @@
     "@reflct/api": "^0.0.2",
     "gsap": "^3.12.5",
     "three": "^0.168.0"
-  }
+  },
+  "gitHead": "7e01b93c07d014b5facbbad00df0c673c0642e5e"
 }
