--- a/package.json
+++ b/package.json
@@ -23,9 +23,13 @@
   "scripts": {
     "version": "lerna version",
     "build": "lerna run build",
-    "test:env": "bash __test__/create_env.sh"
+    "test:env:local": "bash __test__/create_env_development.sh",
+    "test:env:staging": "bash __test__/create_env_staging.sh",
+    "test:env:prod": "bash __test__/create_env_prod.sh",
+    "pack": "lerna exec -- npm pack"
   },
   "dependencies": {
+    "@dotenvx/dotenvx": "^1.31.0",
     "@mkkellogg/gaussian-splats-3d": "0.4.5",
     "concurrently": "^9.0.1"
   }
