--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -12,7 +12,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
         with:
-          node-version: lts/*
+          node-version: "20"
       - name: Install dependencies
         run: npm ci
       - name: Create .env file
@@ -25,6 +25,8 @@ jobs:
         run: npx playwright install --with-deps
       - name: Run Playwright tests
         run: npm run test:snapshot:prod
+        env:
+          NODE_OPTIONS: "--experimental-vm-modules"
       - uses: actions/upload-artifact@v4
         if: ${{ !cancelled() }}
         with:
