--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -34,38 +34,40 @@
   ],
   "license": "MIT",
   "devDependencies": {
-    "@react-three/drei": "^9.92.7",
-    "@react-three/fiber": "^8.15.12",
+    "@babel/plugin-transform-runtime": "^7.26.9",
+    "@babel/preset-env": "^7.26.9",
+    "@babel/preset-react": "^7.26.3",
+    "@babel/preset-typescript": "^7.26.0",
+    "@rollup/plugin-babel": "^6.0.4",
     "@rollup/plugin-commonjs": "^26.0.1",
     "@rollup/plugin-node-resolve": "^15.2.3",
     "@rollup/plugin-replace": "^5.0.7",
     "@rollup/plugin-terser": "^0.4.4",
     "@rollup/plugin-typescript": "^11.1.6",
-    "@types/react": "^18.3.8",
+    "@types/react": "^19.0.10",
     "dotenv": "^16.4.5",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.7.0",
     "postcss": "^8.4.47",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "rollup": "^4.22.4",
     "rollup-plugin-dts": "^6.1.1",
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-postcss": "^4.0.2",
     "sass": "^1.79.2",
-    "three": "^0.168.0",
     "typescript": "^5.6.2"
   },
   "peerDependencies": {
-    "react": "^18.3.1"
+    "react": "^18 || ^19",
+    "@react-three/drei": "^9.92.7 || ^10.0.3",
+    "@react-three/fiber": "^8.15.12 || ^9.0.4",
+    "three": ">=0.160.0"
   },
   "dependencies": {
     "@mkkellogg/gaussian-splats-3d": "0.4.7",
-    "@react-three/drei": "^9.92.7",
-    "@react-three/fiber": "^8.15.12",
     "@reflct/api": "^0.0.7",
-    "gsap": "^3.12.5",
-    "three": "^0.168.0"
+    "gsap": "^3.12.5"
   },
   "gitHead": "7e01b93c07d014b5facbbad00df0c673c0642e5e"
 }
