--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@reflct/api",
-  "version": "0.0.7",
+  "version": "1.0.0-alpha.0",
   "description": "",
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
