--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -1,73 +1,50 @@
 {
-  "name": "@reflct/react",
-  "version": "1.1.1",
+  "name": "@reflct/react-internal",
+  "version": "0.0.0",
   "description": "",
-  "main": "dist/cjs/index.js",
-  "module": "dist/esm/index.js",
+  "main": "dist/index.js",
+  "module": "dist/index.mjs",
   "types": "dist/index.d.ts",
   "exports": {
     ".": {
       "types": "./dist/index.d.ts",
-      "require": "./dist/cjs/index.js",
-      "import": "./dist/esm/index.js"
+      "require": "./dist/index.js",
+      "import": "./dist/index.mjs"
     }
   },
   "files": [
     "dist"
   ],
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/reflct/reflct.git",
-    "directory": "packages/react"
-  },
-  "publishConfig": {
-    "access": "public",
-    "registry": "https://registry.npmjs.org/"
-  },
   "scripts": {
     "clean": "rm -rf dist",
-    "build": "rollup -c",
-    "dev": "rollup -c -w"
+    "build": "npm run clean && vite build",
+    "dev": "vite build --watch"
   },
   "authors": [
     "In Ha Ryu <inha.ryu.97@gmail.com>"
   ],
   "license": "MIT",
   "devDependencies": {
-    "@babel/plugin-transform-runtime": "^7.26.9",
-    "@babel/preset-env": "^7.26.9",
-    "@babel/preset-react": "^7.26.3",
-    "@babel/preset-typescript": "^7.26.0",
-    "@rollup/plugin-babel": "^6.0.4",
-    "@rollup/plugin-commonjs": "^26.0.1",
-    "@rollup/plugin-node-resolve": "^15.2.3",
-    "@rollup/plugin-replace": "^5.0.7",
-    "@rollup/plugin-terser": "^0.4.4",
-    "@rollup/plugin-typescript": "^11.1.6",
-    "@types/react": "^19.0.10",
+    "@types/react": "^18.3.8",
+    "@vitejs/plugin-react": "^4.7.0",
     "dotenv": "^16.4.5",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.7.0",
     "postcss": "^8.4.47",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "rollup": "^4.22.4",
-    "rollup-plugin-dts": "^6.1.1",
-    "rollup-plugin-peer-deps-external": "^2.2.4",
-    "rollup-plugin-postcss": "^4.0.2",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "sass": "^1.79.2",
-    "typescript": "^5.6.2"
+    "vite": "^7.0.5",
+    "vite-plugin-dts": "^4.5.4",
+    "vite-plugin-lib-inject-css": "^2.2.2"
   },
   "peerDependencies": {
-    "@react-three/drei": "^9.92.7 || ^10.0.3",
-    "@react-three/fiber": "^8.15.12 || ^9.0.4",
-    "react": "^18 || ^19",
-    "three": ">=0.160.0"
+    "react": ">=16.8.0 <20.0.0",
+    "react-dom": ">=16.8.0 <20.0.0"
   },
   "dependencies": {
-    "@mkkellogg/gaussian-splats-3d": "0.4.7",
-    "@reflct/api": "^1.1.0",
-    "gsap": "^3.12.5"
-  },
-  "gitHead": "7e01b93c07d014b5facbbad00df0c673c0642e5e"
+    "@reflct/api-internal": "^0.0.0",
+    "gsap": "^3.13.0",
+    "playcanvas": "^2.10.5"
+  }
 }
