--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@reflct/api-internal",
-  "version": "0.0.0",
+  "name": "@reflct/api",
+  "version": "1.1.0",
   "description": "",
   "main": "dist/index.js",
   "module": "dist/index.mjs",
